topbar group gap; fix transparent; icons

--- a/scss/_topBarMac.scss
+++ b/scss/_topBarMac.scss
@@ -147,6 +147,10 @@ main.mac .topbar {
 	}
 
 	.topbar-container {
+		.topbar-group {
+			gap: 1px;
+		}
+
 		.topbar-dropdown {
 			&.attached {
 				.topbar-button {
